3.6.1
 - Updated static libv8 for Mac and Linux to v8-v8-9.6.180.12

3.6.0
 - Try to give better error message when unable to allocate, probably due to
   hitting the stack limit. Previously we would see 'string conversion failed'
   which was very confusing.
 - The same stacklimit is now used across all platforms. Previously we would only
   set it on Linux, but apparently it is also needed on Windows sometimes.
 - Disable stacklimit when running in ASAN (which blows up the stack size)
 - Make DOWNLOAD_STATIC_LIBV8 the default on RHEL/CentOS based distros because
   these include a very old or no libv8.
 - Check and warn against very old libv8 when attaching the package.

3.5.0
 - On legacy systems which still have libv8 version 3.x we now try to download
   a more recent static libv8. We plan to deprecate support for libv8 3.x, which
   is now over 10 years old, and does not support ES6 (modern JavaScript).

3.4.2
 - Add Windows binaries for ucrt targets

3.4.1
 - Minor compatibility fixes by Jan Marvin for new versions of libv8.

3.4.0
 - When setting envvar DOWNLOAD_STATIC_LIBV8=1 on Linux at build-time, the
   configure script automatically downloads a static libv8, instead of looking
   for libv8 on the system. This allows the package to be installed on distros
   that do not have libv8, or ship with a very old V8.
 - The above should work for all x86_64 Linux systems with at least gcc-4.8.5
   and is enabled by default on Travis and Github Actions.
 - Do not assume bash in configure script

3.3.1
 - Fix a bug in the configure script

3.3.0
 - Use CXX14 when available, required as of libv8 version 8.7.80

3.2.0
 - Fix bug with pointer compression feature-test on Debian / Anaconda
 - Linux: increase JS stack limit, because of problems with new libv8 on Fedora.
 - Add FatalErrorHandler and MessageListener callbacks (that just print stuff)
 - Fix UBSAN error during teardown (package unload)

3.1.0